# DNDSR

./: .gitignore  .gitmodules  CMakeLists.txt  Current_Report.html  Current_Report.md  README.md  cmakeCommonUtils.cmake  cmakeConfigureForBSSCT.sh  code0.cpp  code1.cpp  pack.sh  pyproject.toml  requirements.txt  temp1.txt
app/: simpleTestTemplate.cpp
app/CFV/: diffTensors_Test.cpp  vrBasic_Test.cpp  vrStatic_Test.cpp
app/DNDS/: arrayDerived_test.cpp  arrayTrans_test.cpp  array_Test.cpp  objectPool_test.cpp  serializerH5_Test.cpp  serializerJSON_Test.cpp  stdPowerTest.cpp
app/Euler/: euler.cpp  euler2D.cpp  euler2EQ.cpp  euler2EQ3D.cpp  euler3D.cpp  eulerSA.cpp  eulerSA3D.cpp  gasTest.cpp  jacobiLUTest.cpp  oneDimProfileTest.cpp
app/Geom/: elements_Test.cpp  meshSerial_Test.cpp  ofReader_Test.cpp  partitionMeshSerial.cpp
app/Solver/: krylovTest.cpp
cases/: .gitignore  euler2EQ3D_config.json  euler2EQ_config.json  euler2EQ_config_NACA0012.json  euler2EQ_config_PlateBL.json  euler3D_DLRTest.json  euler3D_config.json  euler3D_config_Ball.json  euler3D_config_BallSteady.json  euler3D_config_BenchTGV.json  euler3D_config_Box.json  euler3D_config_DLR.json  euler3D_config_DMR.json  euler3D_config_Noh.json  euler3D_config_SphereShock.json  euler3D_config_TGV.json  euler3D_config_vorstreet.json  euler3D_config_vorstreetLarge.json  euler3D_config_vorstreetStarter.json  euler3D_default_config.json  eulerSA3D_config.json  eulerSA3D_config_CRM.json  eulerSA3D_config_CRMHL.json  eulerSA3D_config_CRMHL_SeriesRun.py  eulerSA3D_config_DLRF6.json  eulerSA3D_config_DPWW1.json  eulerSA3D_config_FanA1.json  eulerSA3D_config_FanA1SeriesGen.py  eulerSA3D_config_FanA1SeriesTmp.json  eulerSA3D_config_PlateBL.json  eulerSA3D_config_Rotor37.json  eulerSA3D_config_Rotor37SeriesGen.py  eulerSA3D_default_config.json  eulerSA_config.json  eulerSA_config_0012_AOA15.json  eulerSA_config_0012_AOA15_Elev.json  eulerSA_config_30p30n.json  eulerSA_config_PlateBL.json  eulerSA_config_testCond.json  eulerSA_default_config.json  (+28 more)
cases/eulerSA/: config_0012_mg_bench.json  config_0012_omp_bench.json  run_0012_mg_bench.py
cases/eulerSA3D/: config_CRM_PartitionBoeing.json  config_CRM_RunBoeing.json
doc/: ideas.md
docs/: .gitignore  CurrentReport.md  CurrentTests.md  Doxyfile  Notes.md  Paradigm.md  Shape_Functions.md  TODO.md  Variational_Reconstruction.md  getAllAttachForDox.py  ideas.md  main.dox  notes.md
docs/HM3/: HM3_IV160tests.m
docs/performance/: cfv_iteration.m  cfv_staticRecData.m  cfv_staticRecData2.m
docs/playground/: mpi_asyncFail.cpp
docs/report0012/: NACA0012.docx  data.txt
docs/reportPP/: reportPP.docx
docs/reportRANS/: TwoEquations.docx
docs/report_2023-06/: CurrentReport.tex  DNDSR_report.bbl  DNDSR_report.blg  DNDSR_report.tex  refs.bib
script/: GenerateStrippedSrc.py  UniformGetSpectrum.py  countLines.sh  monitorLogErr.py  packmin.sh  standardExternalInput.py  testPybind11.py  viewErr.py
script/bash/: hs.sh  sb.sh  set_ld_library.sh  setenv.sh  srunApp.sh  srunEuler.sh  srunEuler2EQ3D.sh  srunEuler3D.sh  srunEulerSA3D.sh  srunPartitionMeshSerial.sh  srunTest.sh  srunTestE.sh  ssb.sh  ts.sh  watch2.sh  ws.sh
script/benchmark/: arrayTransBench.py
script/debug/: ubuntu_disable_attach.sh  ubuntu_enable_attach.sh
script/highOrderDir/: hoDir.py  hoDirSympy.ipynb  polyOrders.py
script/logErrMonitor/: monitorApp.py
script/matlab/: GaussLegendre.m  Node_Hex27.m  Node_Line2.m  Node_Line3.m  Node_Prism18.m  Node_Tet10.m  Node_Tet4.m  Node_Tri3.m  SF_Prism6.m  SF_Pyramid14.m  SF_Pyramid5.m  SF_Quad4.m  SF_Tet10.m  SF_Tri6.m  Shape.mlx
script/matlabElements/: DrawPyramid.m  GaussJacobi.m  Node_Hex8.m  Node_Prism6.m  Node_Pyramid14.m  Node_Pyramid5.m  Node_Quad4.m  Node_Quad9.m  Node_Tri6.m  Quadratures.m  SF_Hex27.m  SF_Hex8.m  SF_Line2.m  SF_Line3.m  SF_Prism18.m  SF_Pyramid14.m  SF_Quad9.m  SF_Tet4.m  SF_Tri3.m  Shape.mlx
script/matlabPoly/: poly2.m
script/matlabTensor/: symTensorSimple.m
script/matlabTest/: HM3_IV160tests.m  getSeq2Order.m  minSmoothing.m
script/python/: job_watchdog.py
script/utils/: GraceExit.py
src/: .clang-format  .clang-tidy  .clang-tidy-fix  .gitignore  __init__.py  check.py  run-clang-format.sh  run-clang-tidy-fix.sh  run-clang-tidy.sh  run-pybind11-stubgen.py  run-pybind11-stubgen.sh
src/CFV/: BaseFunction.hpp  CMakeLists.txt  Limiters.hpp  ParametricBaseFunction.cpp  ParametricBaseFunction.hpp  VRDefines.hpp  VRSettings.hpp  VariationalReconstruction.cpp  VariationalReconstruction.hpp  VariationalReconstruction_LimiterProcedure.hxx  VariationalReconstruction_Reconstruction.hxx
src/DNDS/: Array.hpp  ArrayPair.hpp  ArrayTransformer.hpp  Array_bind.cpp  Array_bind.hpp  CMakeLists.txt  CsvLog.hpp  Defines.cpp  Defines.hpp  Defines_bind.hpp  EigenPCH.cpp  EigenPCH.hpp  EigenUtil.hpp  Experimentals.hpp  ExprtkPCH.cpp  ExprtkPCH.hpp  ExprtkWrapper.cpp  ExprtkWrapper.hpp  HDF5.hpp  HardEigen.cpp  HardEigen.hpp  IndexMapping.hpp  IndexMapping_bind.hpp  JsonUtil.hpp  MPI.cpp  MPI.hpp  MPI_bind.cpp  MPI_bind.hpp  Macros.hpp  ObjectPool.hpp  Profiling.cpp  Profiling.hpp  Serializer.hpp  SerializerBase.hpp  SerializerFactory.hpp  SerializerH5.cpp  SerializerH5.hpp  SerializerJSON.cpp  SerializerJSON.hpp  Warnings.hpp  (+2 more)
src/DNDS/ArrayDerived/: ArrayAdjacency.hpp  ArrayAdjacency_bind.cpp  ArrayAdjacency_bind.hpp  ArrayEigenMatirx.hpp  ArrayEigenMatrixBatch.hpp  ArrayEigenUniMatrixBatch.hpp  ArrayEigenVector.hpp
src/Euler/: CLDriver.hpp  CMakeLists.txt  Euler.hpp  EulerBC.hpp  EulerEvaluator.cpp  EulerEvaluator.hpp  EulerEvaluator.hxx  EulerEvaluatorSettings.hpp  EulerEvaluator_EvaluateDt.cpp  EulerEvaluator_EvaluateDt.hxx  EulerEvaluator_EvaluateDt_NS.cpp  EulerEvaluator_EvaluateDt_NS_2D.cpp  EulerEvaluator_EvaluateDt_NS_3D.cpp  EulerEvaluator_EvaluateDt_NS_SA.cpp  EulerEvaluator_EvaluateDt_NS_SA_3D.cpp  EulerEvaluator_EvaluateRHS.cpp  EulerEvaluator_EvaluateRHS.hxx  EulerEvaluator_EvaluateRHS_NS.cpp  EulerEvaluator_EvaluateRHS_NS_2D.cpp  EulerEvaluator_EvaluateRHS_NS_3D.cpp  EulerEvaluator_EvaluateRHS_NS_SA.cpp  (+20 more)
test/: CMakeCache.txt
(+115 files in other folders)
